# aacgmv2

./: #tox.ini#  .#CHANGELOG.rst  .bumpversion.cfg  .codeclimate.yml  .cookiecutterrc  .coveragerc  .gitignore  .landscape.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULLREQUEST_TEMPLATE/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  main.yml
aacgmv2/: __init__.py  __main__.py  aacgmv2module.c  deprecated.py  depricated.py  magmodel_1590-2015.txt  magmodel_1590-2020.txt  magmodel_1590-2025.txt  utils.py  wrapper.py
aacgmv2/aacgm_coeffs/: aacgm_coeffs-12-1605.asc  aacgm_coeffs-12-1625.asc  aacgm_coeffs-12-1630.asc  aacgm_coeffs-12-1645.asc  aacgm_coeffs-12-1675.asc  aacgm_coeffs-12-1685.asc  aacgm_coeffs-12-1695.asc  aacgm_coeffs-12-1735.asc  aacgm_coeffs-12-1740.asc  aacgm_coeffs-12-1750.asc  aacgm_coeffs-12-1755.asc  aacgm_coeffs-12-1770.asc  aacgm_coeffs-12-1780.asc  aacgm_coeffs-12-1785.asc  aacgm_coeffs-12-1800.asc  aacgm_coeffs-12-1810.asc  aacgm_coeffs-12-1820.asc  aacgm_coeffs-12-1830.asc  aacgm_coeffs-12-1840.asc  aacgm_coeffs-12-1845.asc  aacgm_coeffs-12-1860.asc  aacgm_coeffs-12-1880.asc  aacgm_coeffs-12-1885.asc  aacgm_coeffs-12-1895.asc  aacgm_coeffs-13-1600.asc  aacgm_coeffs-13-1610.asc  aacgm_coeffs-13-1620.asc  aacgm_coeffs-13-1640.asc  aacgm_coeffs-13-1650.asc  aacgm_coeffs-13-1665.asc  aacgm_coeffs-13-1700.asc  aacgm_coeffs-13-1720.asc  aacgm_coeffs-13-1725.asc  aacgm_coeffs-13-1730.asc  aacgm_coeffs-13-1765.asc  aacgm_coeffs-13-1775.asc  aacgm_coeffs-13-1790.asc  aacgm_coeffs-13-1805.asc  aacgm_coeffs-13-1815.asc  aacgm_coeffs-13-1850.asc  (+75 more)
aacgmv2/tests/: __init__.py  test_c_aacgmv2.py  test_cmd_aacgmv2.py  test_convert.txt  test_dep_aacgmv2.py  test_environ_aacgmv2.py  test_py_aacgmv2.py  test_struct_aacgmv2.py  test_utils_aacgmv2.py
aacgmv2/tests/environ/: __init__.py  test_environ_aacgmv2.py
aacgmv2/tests/test_data/: test_convert_mlt.txt  test_convert_single_line.txt
c_aacgmv2/: README.txt  release_notes.txt
c_aacgmv2/include/: aacgmlib_v2.h  astalg.h  igrflib.h  mlt_v2.h  rtime.h
c_aacgmv2/src/: Makefile  aacgmlib_v2.c  igrflib.c  mlt_v2.c  rtime.c  test_aacgm.c  vector.c
ci/: appveyor-bootstrap.py  appveyor-download.py  appveyor-with-compiler.cmd  bootstrap.py
ci/templates/: .travis.yml  appveyor.yml  tox.ini
docs/: conf.py  index.rst  installation.rst  maintenance.rst  requirements.txt  usage.rst
docs/reference/: _aacgmv2.rst  aacgmv2.rst  cli.rst  index.rst
hold/: .travis.yml
src/aacgmv2/: __init__.py  __main__.py  aacgmv2_interface.c  aacgmv2module.c  wrapper.py
src/aacgmv2/c_aacgm_v2/: aacgmlib_v2.c  aacgmlib_v2.h  igrflib.c  test_aacgm.c
src/c_aacgm_v2/: README.txt  aacgmlib_v2.c  igrflib.c  igrflib.h
tests/: test_aacgmv2.py  test_c_aacgmv2.py  test_cmd_aacgmv2.py  test_py_aacgmv2.py
