[build-system]
requires = [
	 "wheel",
	 "setuptools",
	 "oldest-supported-numpy",
]

[project]
name = "aacgmv2"
version = "2.7.0"
license = {file = "LICENSE"}
description = "A Python wrapper for AACGM-v2 magnetic coordinates"
maintainers = [
    {name = "Angeline G. Burrell", email = "angeline.g.burrell.civ@us.navy.mil"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
]
readme = "README.rst"
keywords = [
        'aacgm',
        'aacgm-v2',
        'aacgmv2',
        'magnetic coordinates',
        'altitude adjusted corrected geomagnetic coordinates',
        'mlt',
        'magnetic local time',
        'conversion',
        'converting',
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
]

[project.scripts]
aacgmv2 = 'aacgmv2.__main__:main'

[project.optional-dependencies]
test = [
  "build",
  "flake8",
  "flake8-docstrings",
  "pytest",
  "pytest-cov"
]
doc = [
  "sphinx>=1.3",
  "sphinxcontrib-napoleon",
  "numpydoc",
  "pyproject_parser",
  "sphinx-rtd-theme>=1.2.2"
]

[project.urls]
source = "https://github.com/aburrell/aacgmv2"
documentation = "https://aacgmv2.readthedocs.io/en/latest/"
tracker = "https://github.com/aburrell/aacgmv2/issues"
download = "https://github.com/aburrell/aacgmv2/releases"

[tool.coverage.paths]
source = [
  "aacgmv2",
  "c_aacgmv2"
]

[tool.coverage.run]
branch = true
relative_files = true
include = [
  "*/aacgmv2/*",
  "*/aacgmv2/tests/*"
]
source = [
  "aacgmv2",
  "c_aacgmv2"
]
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2

[tool.pytest]
norecursedirs = [
  ".git",
  ".tox",
  ".env",
  "dist",
  "build",
  "south_migrations",
  "migrations"
]
python_files = [
  "test_*.py",
  "*_test.py",
  "tests.py"
]

[tool.isort]
line_length = 80
known_first_party = "aacgmv2"
forced_separate = "test_aacgmv2"
length_sort = 1
multi_line_output = 0
