[metadata]
version = 2.6.2
long_description= = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst,

[options]
zip_safe = False
install_requires = numpy
include_package_data = True
include_entry_points = True

[aliases]
release = register clean --all sdist

[flake8]
max-line-length = 80
exclude = build/*,tests/*,*/migrations/*,*/south_migrations/*,setup.py

[coverage:paths]
source =
       aacgmv2
       c_aacgmv2

[coverage:run]
branch = True
relative_files = True
include = */aacgmv2/*
	*/aacgmv2/tests/*
source = aacgmv2
       c_aacgmv2
parallel = True

[coverage:report]
show_missing = true
precision = 2
omit = *migrations*

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    south_migrations
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
line_length=80
known_first_party=aacgmv2
default_section=THIRDPARTY
forced_separate=test_aacgmv2
length_sort=1
multi_line_output=0
